--- a/far/bootstrap/xlats.ini
+++ b/far/bootstrap/xlats.ini
@@ -1,6 +1,6 @@
 ; This is global layout transliteration rulesets file.
 ; If you want to apply user-specific configuration, then
-; you can create file ~/.config/far2l/xlats.ini sections
+; you can create file ~/.config/far2m/xlats.ini sections
 ; of which may override global configuration.
 
 [ru:qwerty-йцукен]
