--- a/compare/CMakeLists.txt
+++ b/compare/CMakeLists.txt
@@ -7,7 +7,7 @@ src/Compare.cpp
 
 add_library (compare MODULE ${SOURCES})
 
-target_link_libraries(compare utils far2l)
+target_link_libraries(compare utils far2m)
 
 target_compile_definitions(compare PRIVATE -DWINPORT_DIRECT -DUNICODE -DFAR_DONT_USE_INTERNALS)
 
