Update WinPort from far2l

--- a/WinPort/CMakeLists.txt
+++ b/WinPort/CMakeLists.txt
@@ -34,6 +34,7 @@ src/Backend/TTY/TTYBackend.cpp
 src/Backend/TTY/TTYRevive.cpp
 src/Backend/TTY/TTYInput.cpp
 src/Backend/TTY/TTYInputSequenceParser.cpp
+src/Backend/TTY/TTYInputSequenceParserExts.cpp
 src/Backend/TTY/TTYOutput.cpp
 src/Backend/TTY/TTYFar2lClipboardBackend.cpp
 src/Backend/TTY/OSC52ClipboardBackend.cpp
