--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Packing Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: far2l-release${{ matrix.dependencies }}
+        name: far2m-release${{ matrix.dependencies }}
         path: ${{github.workspace}}/build/install
 
     - name: Test
