Fix build for Ubuntu 16.04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,14 +218,16 @@ endif()
 # plugins directives
 
 function (FindLuaIncludes)
-    foreach(PP "luajit-2.1" "luajit-2.0" "lua5.1")
-      find_path(INC ${PP}/lua.h)
-      if (NOT ${INC} STREQUAL INC-NOTFOUND)
-        set(LUAINC ${INC}/${PP} CACHE INTERNAL "Lua #include path" FORCE)
-        return()
-      endif()
-    endforeach()
-    message(STATUS "${ColorRed}Neither of LuaJIT/Lua5.1 #include path was found${ColorNormal}")
+    if (NOT DEFINED LUAINC)
+        foreach(PP "luajit-2.1" "luajit-2.0" "lua5.1")
+            find_path(INC ${PP}/lua.h)
+            if (NOT ${INC} STREQUAL INC-NOTFOUND)
+                set(LUAINC ${INC}/${PP} CACHE INTERNAL "Lua #include path" FORCE)
+                return()
+            endif()
+        endforeach()
+        message(STATUS "${ColorRed}Neither of LuaJIT/Lua5.1 #include path was found${ColorNormal}")
+    endif()
 endfunction()
 
 add_subdirectory (luafar)
