--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library (${PROJECT_NAME} MODULE ${SOURCES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 11)
 
 set(EXPNAMES
-  CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA
+  CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA MAYEXITFAR
   GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
   SETDIRECTORY SETFINDLIST EXITFAR OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
