--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -30,8 +30,8 @@ endforeach()
 target_compile_definitions(${PROJECT_NAME}
   PRIVATE ${EXPORTS}
   PRIVATE "-DSYS_ID=0x4EBBEFC8"
-  PRIVATE "-DPLUG_MINFARVERSION=0x00020004"
-  PRIVATE "-DPLUG_VERSION=0x030002FD"
+  PRIVATE "-DPLUG_MINFARVERSION=MAKEFARVERSION(2,4)"
+  PRIVATE "-DPLUG_VERSION=MAKEPLUGVERSION(3,0,0,765)"
   PRIVATE "-DPLUG_TITLE=\"LuaMacro\""
   PRIVATE "-DPLUG_DESCRIPTION=\"Far macros in Lua\""
   PRIVATE "-DPLUG_AUTHOR=\"Shmuel Zeigerman & Far Group\""
